--- a/index.html
+++ b/index.html
@@ -205,6 +205,9 @@
         <h2 class=" pb-3 text-center">جميع أعمال التسويق الإلكتروني</h2>
         <div class="container">
             <div class="row mx-0 d-flex justify-content-evenly align-content-center">
+                <div class="col-11 col-md-6 d-md-none d-flex justify-content-center mb-4" data-aos="fade-left" data-aos-duration="1200">
+                    <img src="images/gif3.gif" class="col-12" height="385" style="border-radius: 10px;">
+                </div>
                 <div class="col-md-6 col-12 mb-4 d-flex flex-wrap justify-content-evenly align-content-center" style="padding: 20px 10px;">
                 <!-- بطاقة 1 -->
                 <div class=" col-12  d-flex justify-content-end align-content-center align-items-center mb-3" data-aos="fade-right" data-aos-duration="1200">
@@ -258,13 +261,13 @@
                     <!-- بطاقة 8 -->
                     <div class=" col-12  d-flex justify-content-end align-content-center align-items-center mb-3" data-aos="fade-right" data-aos-duration="1200">
                         <div class="card_2 col-11 col-md-10 d-flex justify-content-end align-content-center align-items-center" style="margin-right: 6% !important;">
-                            <h3 class="me-2 text-light pt-2">إدارة حسابات التواصل الاجتماعي</h3>
+                            <h3 class="me-2 text-light text-center pt-2">إدارة حسابات التواصل الاجتماعي</h3>
                             <i class="fas fa-users ms-1"></i> <!-- أيقونة لإدارة حسابات التواصل الاجتماعي -->
                         </div>
                     </div>
                 </div>
 
-                <div class="col-11 col-md-6 d-flex justify-content-center mb-4" data-aos="fade-left" data-aos-duration="1200">
+                <div class="col-11 col-md-6 d-none d-md-flex justify-content-center mb-4" data-aos="fade-left" data-aos-duration="1200">
                     <img src="images/gif3.gif" class="col-12" height="385" style="border-radius: 10px;">
                 </div>
     
