--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </section>
 
     <section class="Projects" id="design2">
-        <h2 class="mb-5">جميع أعمال التصميم</h2>
+        <h2 class="mb-5 text-center">جميع أعمال التصميم</h2>
         <div class="col-md-10 col-11 m-auto d-flex justify-content-evenly align-content-center" style="padding: 20px 10px; margin: 0 10px; background-color: rgba(24, 24, 24, 0.514); border-radius: 15px; flex-wrap: wrap;">
             <div class="col-11 col-md-5 d-flex justify-content-center mb-4" data-aos="fade-down" data-aos-duration="1200"> 
                 <img src="images/IMG_2938.gif" class="col-12" height="370" style="border-radius: 10px;">
@@ -276,7 +276,7 @@
     </section>
 
     <section class="Projects pb-5" id="design3">
-        <h2 class="mb-5">SEO تحسين محركات البحث</h2>
+        <h2 class="mb-5 text-center">SEO تحسين محركات البحث</h2>
         <div class="col-md-10 col-11 m-auto d-flex justify-content-evenly align-content-center" style="padding: 20px 10px; margin: 0 10px; background-color: rgba(24, 24, 24, 0.514); border-radius: 15px; flex-wrap: wrap;">
             <div class="col-11 col-md-5 d-flex justify-content-center mb-4" data-aos="fade-down" data-aos-duration="1200"> 
                 <img src="images/gif4.gif" class="col-12" height="370" style="border-radius: 10px;">
@@ -312,7 +312,7 @@
     </section>
 
     <section class="Projects pb-5" id="design4">
-        <h2 class="mb-5">تصوير فيديوهات تغطيات</h2>
+        <h2 class="mb-5 text-center">تصوير فيديوهات تغطيات</h2>
         <div class="col-md-10 col-11 m-auto d-flex justify-content-evenly align-content-center" style="padding: 20px 10px; margin: 0 10px; background-color: rgba(24, 24, 24, 0.514); border-radius: 15px; flex-wrap: wrap;">
             <div class="col-11 col-md-5 d-flex justify-content-center mb-4" data-aos="fade-down" data-aos-duration="1200"> 
                 <img src="images/design4.gif" class="col-12" height="370" style="border-radius: 10px;">
@@ -343,8 +343,6 @@
                     <i class="fas fa-utensils"></i> <!-- أيقونة للمطاعم ، المقاهي ، المحلات ، المتاجر -->
                 </div>
             </div>
-            
-            
         </div>
     </section>
 
